Add @penumbra-zone/ui and copy global CSS

--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -74,6 +74,22 @@
     svg {
         display: inline;
     }
+
+    ::-webkit-scrollbar {
+        width: 4px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: #00000040;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 }
 
 @layer utilities {
