--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -18,6 +18,11 @@
     --radius-xl: calc(1rem / 16 * 20);
     --radius-2xl: calc(1rem / 16 * 24);
 
+    /* https://tailwindcss.com/docs/filter-blur */
+    --blur-md: 16px;
+    --blur-lg: 32px;
+    --blur-xl: 64px;
+
     --pageMaxWidth: calc(1rem / 16 * 1536);
     --pageNarrowWidth: calc(1rem / 16 * 752);
     --font-primary: Poppins, sans-serif;
