Extract Tailwind typography customization

--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "./animations.css";
 @import "./colors.css";
+@import "./typography.css";
 
 @source "../../../node_modules/@penumbra-zone/ui/dist";
 
@@ -27,26 +28,6 @@
 
     --pageMaxWidth: calc(1rem / 16 * 1536);
     --pageNarrowWidth: calc(1rem / 16 * 752);
-    --font-default: Poppins, sans-serif;
-    --font-heading: "Work Sans", sans-serif;
-    --font-mono: _fontMono, monospace;
-
-    --text-xs: calc(1rem / 16 * 12);
-    --text-xs--line-height: 1rem;
-    --text-sm: calc(1rem / 16 * 14);
-    --text-sm--line-height: calc(1rem / 16 * 20);
-    --text-base: 1rem;
-    --text-base--line-height: calc(1rem / 16 * 24);
-    --text-lg: calc(1rem / 16 * 18);
-    --text-lg--line-height: calc(1rem / 16 * 28);
-    --text-xl: calc(1rem / 16 * 20);
-    --text-xl--line-height: calc(1rem / 16 * 32);
-    --text-2xl: calc(1rem / 16 * 24);
-    --text-2xl--line-height: calc(1rem / 16 * 36);
-    --text-3xl: calc(1rem / 16 * 30);
-    --text-3xl--line-height: calc(1rem / 16 * 40);
-    --text-4xl: calc(1rem / 16 * 36);
-    --text-4xl--line-height: calc(1rem / 16 * 44);
 
     --text: #fafafa;
     --textSecondary: #a3a3a3;
@@ -104,77 +85,5 @@
 
     ::-webkit-scrollbar-thumb:hover {
         background: #555;
-    }
-}
-
-@layer utilities {
-    @media (max-width: calc(1rem / 16 * 600)) {
-        .text-xs {
-            font-size: calc(1rem / 16 * 11);
-        }
-
-        .text-sm {
-            font-size: calc(1rem / 16 * 12);
-        }
-
-        .text-base {
-            font-size: calc(1rem / 16 * 14);
-        }
-
-        /* TODO: Set values from Figma when available
-        .text-lg {
-            font-size: calc(1.125rem * 0.875);
-        }
-
-        .text-xl {
-            font-size: calc(1.25rem * 0.875);
-        }*/
-
-        .text-2xl {
-            font-size: calc(1rem / 16 * 21);
-        }
-
-        .text-3xl {
-            font-size: calc(1rem / 16 * 26);
-        }
-
-        .text-4xl {
-            font-size: calc(1rem / 16 * 32);
-        }
-    }
-
-    @media (min-width: calc(1rem / 16 * 1600)) {
-        .text-xs {
-            font-size: calc(1em / 16 * 14);
-        }
-
-        .text-sm {
-            font-size: 1rem;
-        }
-
-        .text-base {
-            font-size: calc(1rem / 16 * 18);
-        }
-
-        /* TODO: Set values from Figma when available
-        .text-lg {
-            font-size: calc(1.125rem * 1.125);
-        }
-
-        .text-xl {
-            font-size: calc(1.25rem * 1.125);
-        }*/
-
-        .text-2xl {
-            font-size: calc(1rem / 16 * 27);
-        }
-
-        .text-3xl {
-            font-size: calc(1rem / 16 * 34);
-        }
-
-        .text-4xl {
-            font-size: calc(1rem / 16 * 40);
-        }
     }
 }
