--- a/src/lib/css/colors.css
+++ b/src/lib/css/colors.css
@@ -41,7 +41,7 @@
     --color-success-dark: var(--color-green-950);
     --color-success-contrast: var(--color-green-50);
 
-    /* Base Colors */
+    /* Base */
     --color-base-black: #000;
     --color-base-blackAlt: #0d0d0d;
     --color-base-white: #fff;
@@ -53,7 +53,7 @@
     --color-text-muted: var(--color-neutral-700);
     --color-text-special: var(--color-orange-400);
 
-    /* Actions */
+    /* Action */
     --color-action-hoverOverlay: color-mix(
         in oklab,
         var(--color-teal-400) 15%,
@@ -111,4 +111,19 @@
         var(--color-black) 50%,
         transparent
     );
+
+    /* Gradient */
+    --color-card: "linear-gradient(136deg, rgba(250, 250, 250, 0.1) 6.32%, rgba(250, 250, 250, 0.01) 75.55%)";
+    --color-accentRadialBackground: "radial-gradient(100% 100% at 0% 0%, rgba(244, 156, 67, 0.25) 0%, rgba(244, 156, 67, 0.03) 100%)";
+    --color-accentRadialGradient: "radial-gradient(50% 100% at 50% 100%, rgba(186, 77, 20, 0.35) 0%, rgba(186, 77, 20, 0.00) 95%)";
+    --color-buttonDisabled: "linear-gradient(0deg, rgba(10, 10, 10, 0.8) 0%, rgba(10, 10, 10, 0.8) 100%)";
+    --color-buttonHover: "linear-gradient(0deg, rgba(83, 174, 168, 0.15) 0%, rgba(83, 174, 168, 0.15) 100%)";
+    --color-cautionRadialBackground: "radial-gradient(100% 100% at 0% 0%, rgba(153, 97, 15, 0.25) 0%, rgba(153, 97, 15, 0.03) 100%)";
+    --color-destructiveRadialBackground: "radial-gradient(100% 100% at 0% 0%, rgba(175, 38, 38, 0.25) 0%, rgba(175, 38, 38, 0.03) 100%)";
+    --color-neutralRadialGradient: "radial-gradient(50% 100% at 50% 100%, rgba(163, 163, 163, 0.35) 0%, rgba(163, 163, 163, 0.00) 95%)";
+    --color-progressLoading: "linear-gradient(90deg,rgba(255, 255, 255, 0) 0%,#fff 50%,rgba(255, 255, 255, 0) 100%)";
+    --color-secondaryRadialBackground: "radial-gradient(100% 100% at 0% 0%, rgba(83, 174, 168, 0.25) 0%, rgba(83, 174, 168, 0.03) 100%)";
+    --color-shimmer: "linear-gradient(90deg, rgba(250, 250, 250, 0.05) 0%, rgba(250, 250, 250, 0.10) 100%)";
+    --color-unshieldRadialBackground: "radial-gradient(100% 100% at 0% 0%, rgba(193, 166, 204, 0.25) 0%, rgba(193, 166, 204, 0.03) 100%)";
+    --color-unshieldRadialGradient: "radial-gradient(50% 100% at 50% 100%, rgba(112, 82, 121, 0.35) 0%, rgba(112, 82, 121, 0.00) 95%)";
 }
