--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -30,9 +30,6 @@
     --pageMaxWidth: calc(1rem / 16 * 1536);
     --pageNarrowWidth: calc(1rem / 16 * 752);
 
-    --text: #fafafa;
-    --textSecondary: #a3a3a3;
-    --textDisabled: #6a6a6a;
     --surface: rgba(250, 250, 250, 0.05);
     --surfaceLight: rgba(250, 250, 250, 0.1);
     --surfaceLighter: rgba(250, 250, 250, 0.15);
@@ -51,20 +48,20 @@
 /* https://tailwindcss.com/docs/preflight#extending-preflight */
 @layer base {
     body {
-        background: #0d0d0d;
-        color: var(--text);
+        background: var(--color-base-blackAlt);
+        color: var(--color-text-primary);
         font-family: var(--font-default);
         font-size: var(--text-base);
         line-height: var(--text-base--line-height);
     }
 
     a {
-        color: var(--text);
+        color: var(--color-text-primary);
         text-decoration: none;
         transition: color 200ms var(--fastOutSlowIn);
 
         &:hover {
-            color: var(--primaryLight);
+            color: var(--color-text-special);
         }
     }
 
