--- a/src/lib/css/typography.css
+++ b/src/lib/css/typography.css
@@ -1,3 +1,179 @@
+/* Font size (legacy Penumbra classes) */
+.text-textXs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+
+.text-textSm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.text-textBase {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+.text-textLg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+}
+
+.text-textXl {
+    font-size: 1.25rem;
+    line-height: 2rem;
+}
+
+.text-text2xl {
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+}
+
+.text-text3xl {
+    font-size: 1.875rem;
+    line-height: 2.5rem;
+}
+
+.text-text4xl {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+}
+
+.text-text5xl {
+    font-size: 3rem;
+    line-height: 3.5rem;
+}
+
+.text-text6xl {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+}
+
+.text-text7xl {
+    font-size: 4.5rem;
+    line-height: 5rem;
+}
+
+.text-text8xl {
+    font-size: 6rem;
+    line-height: 6.25rem;
+}
+
+.text-text9xl {
+    font-size: 8rem;
+    line-height: 8.25rem;
+}
+
+/* Reduce font size below sm */
+@media (max-width: calc(1rem / 16 * 600)) {
+    .text-textXs {
+        font-size: 0.6875rem;
+    }
+
+    .text-textSm {
+        font-size: 0.75rem;
+    }
+
+    .text-textBase {
+        font-size: 0.875rem;
+    }
+
+    .text-textLg {
+        font-size: 1rem;
+    }
+
+    .text-textXl {
+        font-size: 1.125rem;
+    }
+
+    .text-text2xl {
+        font-size: 1.3125rem;
+    }
+
+    .text-text3xl {
+        font-size: 1.625rem;
+    }
+
+    .text-text4xl {
+        font-size: 2rem;
+    }
+
+    .text-text5xl {
+        font-size: 2.625rem;
+    }
+
+    .text-text6xl {
+        font-size: 3.25rem;
+    }
+
+    .text-text7xl {
+        font-size: 3.9375rem;
+    }
+
+    .text-text8xl {
+        font-size: 5.25rem;
+    }
+
+    .text-text9xl {
+        font-size: 7rem;
+    }
+}
+
+/* Increase font size above xl */
+@media (min-width: calc(1rem / 16 * 1600)) {
+    .text-textXs {
+        font-size: 0.875rem;
+    }
+
+    .text-textSm {
+        font-size: 1rem;
+    }
+
+    .text-textBase {
+        font-size: 1.125rem;
+    }
+
+    .text-textLg {
+        font-size: 1.25rem;
+    }
+
+    .text-textXl {
+        font-size: 1.375rem;
+    }
+
+    .text-text2xl {
+        font-size: 1.6875rem;
+    }
+
+    .text-text3xl {
+        font-size: 2.125rem;
+    }
+
+    .text-text4xl {
+        font-size: 2.5rem;
+    }
+
+    .text-text5xl {
+        font-size: 3.375rem;
+    }
+
+    .text-text6xl {
+        font-size: 4.25rem;
+    }
+
+    .text-text7xl {
+        font-size: 5.0625rem;
+    }
+
+    .text-text8xl {
+        font-size: 6.75rem;
+    }
+
+    .text-text9xl {
+        font-size: 9rem;
+    }
+}
+
 @theme {
     /* Font family */
     --font-default: Poppins, sans-serif;
