Refactor theme and remove old CSS variables

--- a/src/lib/css/animations.css
+++ b/src/lib/css/animations.css
@@ -15,7 +15,7 @@
 
     @keyframes copy-animation {
         from {
-            border-color: var(--surfaceLighter);
+            border-color: var(--color-other-tonalFill10);
         }
 
         to {
