--- a/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
+++ b/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
@@ -1,5 +1,11 @@
 @reference "../../lib/css/global.css";
 
+.link {
+    width: 15px;
+    height: 15px;
+    line-height: 1;
+}
+
 .block {
     @apply bg-neutral-main ease-fast-out-slow-in hover:bg-neutral-800;
     @apply inline-block rounded-xs transition-[background] duration-200;
