--- a/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
+++ b/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
@@ -7,8 +7,8 @@
 }
 
 .block {
-    @apply bg-neutral-main ease-fast-out-slow-in hover:bg-neutral-800;
-    @apply inline-block rounded-xs transition-[background] duration-200;
+    @apply bg-neutral-main ease-fast-out-slow-in inline-block rounded-xs;
+    @apply transition-[background] duration-200 select-none hover:bg-neutral-800;
     width: 15px;
     height: 15px;
 
