--- a/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
+++ b/src/containers/validatorStatusContainer/validatorStatusContainer.module.css
@@ -20,7 +20,7 @@
 }
 
 .block {
-    @apply bg-neutral-main ease-fast-out-slow-in inline-block rounded-xs;
+    @apply bg-neutral-main inline-block rounded-xs ease-out;
     @apply transition-[background] duration-200 hover:bg-neutral-800;
     width: 15px;
     height: 15px;
