--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -25,9 +25,6 @@
     --blur-md: 16px;
     --blur-lg: 32px;
     --blur-xl: 64px;
-
-    /* Easings */
-    --ease-fast-out-slow-in: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* https://tailwindcss.com/docs/preflight#extending-preflight */
@@ -43,7 +40,7 @@
     a {
         color: var(--color-text-primary);
         text-decoration: none;
-        transition: color 200ms var(--ease-fast-out-slow-in);
+        transition: color 200ms ease-out;
 
         &:hover {
             color: var(--color-text-special);
