Improve scrollbar styling and spacing

--- a/src/lib/css/scrollbar.css
+++ b/src/lib/css/scrollbar.css
@@ -30,6 +30,7 @@
 
 .scroll-area-component::-webkit-scrollbar {
     width: 10px;
+    height: 6px;
 }
 
 .scroll-area-component::-webkit-scrollbar-track {
