--- a/src/lib/css/colors.css
+++ b/src/lib/css/colors.css
@@ -1,15 +1,15 @@
 @theme {
     /* Neutral */
-    --color-neutral-main: var(--color-neutral-700);
+    --color-neutral-main: #404040;
     --color-neutral-light: #a3a3a3;
-    --color-neutral-dark: var(--color-neutral-900);
-    --color-neutral-contrast: var(--color-neutral-50);
+    --color-neutral-dark: #171717;
+    --color-neutral-contrast: #fafafa;
 
     /* Primary */
     --color-primary-main: #ba4d14;
     --color-primary-light: #f49c43;
     --color-primary-dark: #200b04;
-    --color-primary-contrast: var(--color-orange-50);
+    --color-primary-contrast: #fff8ed;
 
     /* Secondary */
     --color-secondary-main: #226362;
@@ -43,38 +43,36 @@
 
     /* Base */
     --color-base-black: #000;
-    --color-base-blackAlt: #0d0d0d;
+    --color-base-black-alt: #0d0d0d;
     --color-base-white: #fff;
     --color-base-transparent: transparent;
 
     /* Text */
-    --color-text-primary: var(--color-neutral-50);
-    --color-text-secondary: var(--color-neutral-light);
-    --color-text-muted: var(--color-neutral-700);
-    --color-text-special: var(--color-primary-light);
+    --color-text-primary: #fafafa;
+    --color-text-secondary: #a3a3a3;
+    --color-text-muted: #404040;
+    --color-text-special: #f49c43;
 
     /* Action */
-    --color-action-hoverOverlay: rgb(from #53aea8 r g b / 0.15);
-    --color-action-activeOverlay: oklch(
-        from var(--color-neutral-950) l c h / 0.15
-    );
-    --color-action-disabledOverlay: oklch(
-        from var(--color-neutral-950) l c h / 0.8
-    );
-
-    --color-action-primaryFocusOutline: #f49c43;
-    --color-action-secondaryFocusOutline: #53aea8;
-    --color-action-unshieldFocusOutline: #c1a6cc;
-    --color-action-neutralFocusOutline: #a3a3a3;
-    --color-action-destructiveFocusOutline: #f17878;
-    --color-action-successFocusOutline: #55d383;
+    --color-action-hover-overlay: #53aea826;
+    --color-action-active-overlay: #0a0a0a26;
+    --color-action-disabled-overlay: #0a0a0acc;
+    --color-action-primary-focus-outline: #f49c43;
+    --color-action-secondary-focus-outline: #53aea8;
+    --color-action-unshield-focus-outline: #c1a6cc;
+    --color-action-neutral-focus-outline: #a3a3a3;
+    --color-action-destructive-focus-outline: #f17878;
+    --color-action-success-focus-outline: #55d383;
 
     /* Other */
-    --color-other-tonalStroke: oklch(from var(--color-neutral-50) l c h / 0.15);
-    --color-other-tonalFill5: oklch(from var(--color-neutral-50) l c h / 0.05);
-    --color-other-tonalFill10: oklch(from var(--color-neutral-50) l c h / 0.1);
-    --color-other-tonalFill20: oklch(from var(--color-neutral-50) l c h / 0.2);
-    --color-other-solidStroke: var(--color-neutral-900);
-    --color-other-dialogBackground: rgb(from #226362 r g b / 0.1);
-    --color-other-overlay: oklch(from var(--color-black) l c h / 0.5);
+    --color-other-tonal-stroke: #fafafa26;
+    --color-other-tonal-fill5: #fafafa0d;
+    --color-other-tonal-fill10: #fafafa1a;
+    --color-other-tonal-fill15: #fafafa26;
+    --color-other-tonal-fill20: #fafafa33;
+    --color-other-solid-stroke: #171717;
+    --color-other-dialog-background: #2263621a;
+    --color-other-overlay: #00000080;
+    --color-other-orange-outline: #ba4d14d9;
+    --color-other-neutral-outline: #404040d9;
 }
