Refactor block panel chart and remove height-scaling

--- a/src/components/panels/blockPanel/blockPanel.module.css
+++ b/src/components/panels/blockPanel/blockPanel.module.css
@@ -3,36 +3,16 @@
 .bar {
     &.active {
         background: var(--color-secondary-light);
-        box-shadow: 0 0 64px 8px var(--color-secondary-light);
-        transform: scaleY(2);
+        box-shadow: 0 0 8px 4px
+            rgb(from var(--color-secondary-light) r g b / 0.6);
 
         & + div {
-            background: rgba(83, 174, 168, 0.5);
-            box-shadow: 0 0 4px 2px rgba(83, 174, 168, 0.1);
-            transform: scaleY(1.5);
+            background: rgb(from var(--color-secondary-light) r g b / 0.5);
         }
     }
 
     &:has(+ .active) {
-        background: rgba(83, 174, 168, 0.5);
-        box-shadow: 0 0 4px 2px rgba(83, 174, 168, 0.1);
-        transform: scaleY(1.5);
-    }
-}
-
-@media (min-width: calc(1rem / 16 * 600)) {
-    .bar {
-        &.active {
-            transform: scaleY(1.3);
-
-            & + div {
-                transform: scaleY(1.1);
-            }
-        }
-
-        &:has(+ .active) {
-            transform: scaleY(1.1);
-        }
+        background: rgb(from var(--color-secondary-light) r g b / 0.5);
     }
 }
 
